[gd_scene load_steps=9 format=3 uid="uid://c2jh8ihfg6rdt"]

[ext_resource type="Texture2D" uid="uid://qmqqxgdwwjvw" path="res://images/Buttoning/build_base.png" id="1_rjlbs"]
[ext_resource type="Texture2D" uid="uid://7ct1gd0f0cd1" path="res://images/Buttoning/build_base_selected.png" id="2_tgetp"]
[ext_resource type="Texture2D" uid="uid://cyjkjq0ex6jsg" path="res://images/Buttoning/build_base_hover.png" id="3_l0obi"]
[ext_resource type="Texture2D" uid="uid://nvg0dymna5ic" path="res://images/Buttoning/build_base_down.png" id="4_fd40d"]
[ext_resource type="Script" path="res://unique_scripts/tier2build.gd" id="5_aj3sh"]
[ext_resource type="Texture2D" uid="uid://4wno125as22v" path="res://images/UpgradeIcon/buildings/chest.png" id="6_7bawc"]
[ext_resource type="Texture2D" uid="uid://bqaeq5ce72xsd" path="res://images/UpgradeIcon/upgrades/coiner.png" id="7_e6i12"]
[ext_resource type="AudioStream" uid="uid://cedcmjmiii7px" path="res://Audio/MenuTap.ogg" id="8_agyes"]

[node name="chest_build" type="TextureButton" groups=["Building", "Persist"]]
visible = false
custom_minimum_size = Vector2(704, 100)
texture_normal = ExtResource("1_rjlbs")
texture_pressed = ExtResource("2_tgetp")
texture_hover = ExtResource("3_l0obi")
texture_disabled = ExtResource("4_fd40d")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("5_aj3sh")
title = "Chests"
description = "Also comfy to nap in!"
bcost = 250
bpower = 150.0
modifier = 1.0
tier = 2

[node name="I" type="Sprite2D" parent="."]
position = Vector2(68, 48)
scale = Vector2(0.325, 0.325)
texture = ExtResource("6_7bawc")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Aupdate" type="Timer" parent="."]
autostart = true

[node name="A" type="Label" parent="."]
layout_mode = 0
offset_left = 554.0
offset_top = 56.0
offset_right = 826.0
offset_bottom = 114.0
scale = Vector2(0.5, 0.5)
horizontal_alignment = 2

[node name="P" type="Label" parent="."]
layout_mode = 0
offset_left = 554.0
offset_top = 15.0
offset_right = 826.0
offset_bottom = 73.0
scale = Vector2(0.5, 0.5)
text = "+0.1 N/s"
horizontal_alignment = 2

[node name="Desc" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -216.0
offset_top = 10.0
offset_right = 718.0
offset_bottom = 98.0
grow_horizontal = 2
scale = Vector2(0.5, 0.5)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 60
text = "Chest"
horizontal_alignment = 1

[node name="C" type="Label" parent="."]
layout_mode = 0
offset_left = 170.0
offset_top = 52.0
offset_right = 438.0
offset_bottom = 134.0
scale = Vector2(0.5, 0.5)
theme_override_font_sizes/font_size = 54
text = "1.2"

[node name="cost" type="Sprite2D" parent="C"]
position = Vector2(-35, 40)
scale = Vector2(0.4, 0.4)
texture = ExtResource("7_e6i12")

[node name="Tap" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("8_agyes")
pitch_scale = 1.5

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Aupdate" to="." method="_autoupdate"]
